// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.build.config has expected default css rule 1`] = `
Object {
  "include": Array [
    "/srv/bud/tests/util/project/src",
  ],
  "test": /\\\\\\.module\\\\\\.css\\$/,
  "use": Array [
    Object {
      "loader": "/srv/bud/node_modules/mini-css-extract-plugin/dist/loader.js",
    },
    Object {
      "loader": "/srv/bud/node_modules/css-loader/dist/cjs.js",
      "options": Object {
        "importLoaders": 1,
        "localIdentName": "[name]__[local]___[hash:base64:5]",
        "modules": true,
        "sourceMap": false,
      },
    },
  ],
}
`;

exports[`bud.build.config has expected default cssModule rule 1`] = `
Object {
  "exclude": Array [
    "/srv/bud/tests/util/project/node_modules",
  ],
  "include": Array [
    "/srv/bud/tests/util/project",
  ],
  "test": /\\\\\\.\\(csv\\|tsv\\)\\$/,
  "use": Array [
    Object {
      "loader": "/srv/bud/node_modules/csv-loader/index.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default csv rule 1`] = `
Object {
  "generator": Object {
    "filename": "images/[name][ext]",
  },
  "include": Array [
    "/srv/bud/tests/util/project/src",
  ],
  "test": /\\\\\\.webp\\$/,
  "type": "asset/resource",
}
`;

exports[`bud.build.config has expected default font rule 1`] = `
Object {
  "include": Array [
    "/srv/bud/tests/util/project/src",
  ],
  "test": /\\\\\\.\\(cjs\\|mjs\\|jsx\\?\\)\\$/,
  "use": Array [
    Object {
      "loader": "/srv/bud/sources/@roots/bud-babel/node_modules/babel-loader/lib/index.js",
      "options": Object {
        "cacheDirectory": "/srv/bud/tests/util/project/.budfiles/cache/babel",
        "env": Object {
          "development": Object {
            "compact": false,
          },
        },
        "plugins": Array [
          Array [
            "/srv/bud/sources/@roots/bud-babel/node_modules/@babel/plugin-transform-runtime/lib/index.js",
            Object {
              "helpers": false,
            },
          ],
          Array [
            "/srv/bud/node_modules/@babel/plugin-proposal-object-rest-spread/lib/index.js",
          ],
          Array [
            "/srv/bud/node_modules/@babel/plugin-syntax-dynamic-import/lib/index.js",
          ],
          Array [
            "/srv/bud/node_modules/@babel/plugin-proposal-class-properties/lib/index.js",
          ],
        ],
        "presets": Array [
          Array [
            "/srv/bud/node_modules/@babel/preset-env/lib/index.js",
          ],
        ],
        "root": "/srv/bud/tests/util/project",
      },
    },
  ],
}
`;

exports[`bud.build.config has expected default html rule 1`] = `
Object {
  "exclude": Array [
    "/srv/bud/tests/util/project/node_modules",
  ],
  "include": Array [
    "/srv/bud/tests/util/project",
  ],
  "parser": Object {
    "parse": [Function],
  },
  "test": /\\\\\\.\\(html\\?\\)\\$/,
  "type": "json",
}
`;

exports[`bud.build.config has expected default image rule 1`] = `
Object {
  "generator": Object {
    "filename": "fonts/[name][ext]",
  },
  "include": Array [
    "/srv/bud/tests/util/project/src",
  ],
  "test": /\\\\\\.\\(ttf\\|otf\\|eot\\|woff2\\?\\|ico\\)\\$/,
  "type": "asset",
}
`;

exports[`bud.build.config has expected default js rule 1`] = `
Object {
  "include": Array [
    "/srv/bud/tests/util/project/src",
  ],
  "test": /\\\\\\.css\\$/,
  "use": Array [
    Object {
      "loader": "/srv/bud/node_modules/mini-css-extract-plugin/dist/loader.js",
    },
    Object {
      "loader": "/srv/bud/node_modules/css-loader/dist/cjs.js",
      "options": Object {
        "importLoaders": 1,
        "sourceMap": false,
      },
    },
    Object {
      "loader": "/srv/bud/node_modules/postcss-loader/dist/cjs.js",
      "options": Object {
        "postcssOptions": Object {
          "plugins": Array [
            Array [
              "/srv/bud/node_modules/postcss-import/index.js",
            ],
            Array [
              [Function],
            ],
            Array [
              [Function],
            ],
            Array [
              "/srv/bud/node_modules/postcss-preset-env/dist/index.cjs",
              Object {
                "features": Object {
                  "focus-within-pseudo-class": false,
                },
                "stage": 1,
              },
            ],
          ],
        },
        "sourceMap": true,
      },
    },
  ],
}
`;

exports[`bud.build.config has expected default json rule 1`] = `
Object {
  "exclude": Array [
    "/srv/bud/tests/util/project/node_modules",
  ],
  "include": Array [
    "/srv/bud/tests/util/project",
  ],
  "parser": Object {
    "parse": undefined,
  },
  "test": /\\\\\\.json\\$/,
  "type": "json",
}
`;

exports[`bud.build.config has expected default requireEnsure rule 1`] = `
Object {
  "exclude": Array [
    /node_modules/,
  ],
  "parser": Object {
    "requireEnsure": false,
  },
  "test": /\\\\\\.\\(cjs\\|mjs\\|jsx\\?\\)\\$/,
}
`;

exports[`bud.build.config has expected default svg rule 1`] = `
Object {
  "generator": Object {
    "filename": "images/[name][ext]",
  },
  "include": Array [
    "/srv/bud/tests/util/project/src",
  ],
  "test": /\\\\\\.\\(png\\|jpe\\?g\\|gif\\|webp\\)\\$/,
  "type": "asset/resource",
}
`;

exports[`bud.build.config has expected default toml rule 1`] = `
Object {
  "exclude": Array [
    "/srv/bud/tests/util/project/node_modules",
  ],
  "include": Array [
    "/srv/bud/tests/util/project",
  ],
  "test": /\\\\\\.ya\\?ml\\$/,
  "use": Array [
    Object {
      "loader": "/srv/bud/node_modules/yml-loader/index.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default webp rule 1`] = `
Object {
  "exclude": Array [
    "/srv/bud/tests/util/project/node_modules",
  ],
  "include": Array [
    "/srv/bud/tests/util/project",
  ],
  "test": /\\\\\\.\\(html\\?\\)\\$/,
  "use": Array [
    Object {
      "loader": "/srv/bud/node_modules/html-loader/dist/cjs.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default xml rule 1`] = `
Object {
  "exclude": Array [
    "/srv/bud/tests/util/project/node_modules",
  ],
  "include": Array [
    "/srv/bud/tests/util/project",
  ],
  "test": /\\\\\\.xml\\$/,
  "use": Array [
    Object {
      "loader": "/srv/bud/node_modules/xml-loader/index.js",
    },
  ],
}
`;

exports[`bud.build.config has expected default yaml rule 1`] = `
Object {
  "generator": Object {
    "filename": "svg/[name][ext]",
  },
  "include": Array [
    "/srv/bud/tests/util/project/src",
  ],
  "test": /\\\\\\.svg\\$/,
  "type": "asset/resource",
}
`;

exports[`bud.build.config has expected resolve.extensions default 1`] = `
Array [
  ".mjs",
  ".cjs",
  ".js",
  ".jsx",
  ".css",
  ".json",
  ".wasm",
  ".yml",
  ".toml",
]
`;
